-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8136760 | 8u72 | Guru Hb | P3 | Closed | Fixed | b01 |
It seems that the WebView JavaFx Browser can get stuck in an infinite loop when calling getTotalLength() on a particular svg <path> object.
Here are two Jsfiddles, the first one works, the second one gets in an infinite loop. The only difference is changing the last decimal of the path data from a 6 to a 7.
http://jsfiddle.net/UBsu2/
http://jsfiddle.net/UBsu2/1/
This problem is also exhibited in Chrome and Safari, but not in Firefox and IE9.
Here are two Jsfiddles, the first one works, the second one gets in an infinite loop. The only difference is changing the last decimal of the path data from a 6 to a 7.
http://jsfiddle.net/UBsu2/
http://jsfiddle.net/UBsu2/1/
This problem is also exhibited in Chrome and Safari, but not in Firefox and IE9.
- backported by
-
JDK-8136760 JavaFX browser can get stuck in an infinite loop when calling path.getTotalLength()
-
- Closed
-
- is cloned by
-
JDK-8163582 JavaFX browser can get stuck in an infinite loop when calling path.getTotalLength()
-
- Resolved
-