8090035: JavaFX browser can get stuck in an infinite loop when calling path.getTotalLength()

Reviewed-by: kcr, vadim, azvegint