modules/web/src/main/native/Source/WebCore/platform/graphics/PathTraversalState.h
@@ -55,8 +55,6 @@ public:
 
     FloatPoint m_current;
     FloatPoint m_start;
-    FloatPoint m_control1;
-    FloatPoint m_control2;
 
     float m_totalLength;
     unsigned m_segmentIndex;
